<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterationMethod"
    android:background="@drawable/registeration_method_bkgrd"
    android:weightSum="10"
    android:orientation="vertical">


    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>

    <ImageView
        android:id="@+id/logo_Image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="2.9"
        android:layout_gravity="center"
        android:transitionName="logo_Image"
        android:src="@drawable/registration_method_bike_bkgrd"/>



    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:fontFamily="@font/nexa_bold"
        android:transitionName="logo_Text"
        />


    <TextView
        android:id="@+id/slogan"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:text="@string/it_s_easier_to_sign_up_now"
        android:layout_gravity="center"
        android:letterSpacing="0.2"
        android:textColor="@color/grey"
        android:textSize="12sp"
        android:fontFamily="@font/nexa_bold"
        android:transitionName="logo_Text"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.1"/>

    <Button
        android:id="@+id/signUp_btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:background="@drawable/regis_signup_bkgrd"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/create_account_or_sign_up"
        android:fontFamily="@font/nexa_bold"
        android:textSize="11sp"
        android:letterSpacing="0.2"


        />
    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.2"/>

    <Button
        android:id="@+id/signIn_Btn"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:background="@drawable/regis_sign_in_bkgrd"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="SIGN IN"
        android:fontFamily="@font/nexa_bold"
        android:textSize="11sp"
        android:letterSpacing="0.2"
        />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1.2"
        />
</LinearLayout>