<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/dashboard_menu"
    tools:context="com.example.ozaar.spare.parts.Fragment.Fragment_Dashboard"
    android:background="@drawable/background_2"
    android:orientation="vertical"
    android:weightSum="10"
    >

    //0.5

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5" />



    //1

    <RelativeLayout
        android:id="@+id/profilRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="12dp"
        android:layout_weight="1">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:src="@drawable/profile_image_dashboard"
            app:civ_border_color="#FFFFFF"
            app:civ_border_width="1dp" />

        <LinearLayout
            android:id="@+id/ProfileLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@id/profile_image"
            android:orientation="vertical">

            <TextView
                android:id="@+id/Dashboard_PersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexa_bold"
                android:inputType="text"

                android:textColor="#ffff"
                android:textSize="12sp"


                />

            <TextView
                android:id="@+id/Dashboard_PersonPhoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/Dashboard_PersonName"
                android:layout_gravity="center"
                android:fontFamily="@font/nexa_bold"
                android:inputType="number"

                android:textColor="#ffff"
                android:textSize="10sp"

                />
        </LinearLayout>
    </RelativeLayout>

    //1
    <RelativeLayout


        android:id="@+id/profileRelativelayoutOfLoss"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/loss_detail_background"
        android:layout_gravity="right"
        >

        <LinearLayout
            android:id="@+id/ProfileLossLinearLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:orientation="vertical"

            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="2dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/this_is_loss_by"
                    android:textColor="@color/darkblue"
                    android:textSize="11sp" />


                <TextView
                    android:id="@+id/NumberOfLossItems"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_bold_italic"
                    android:inputType="number"
                    android:text="2"
                    android:textColor="@color/darkblue"
                    android:textSize="12dp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/products"
                    android:textColor="@color/darkblue"
                    android:textSize="11sp"

                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"

                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/pkr"
                    android:textColor="@color/darkblue"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/Dashboard_lossPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/helve_thin"
                    android:textColor="@color/darkblue"
                    android:text="10.0"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="10dp"
                    android:layout_height="10dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:layout_marginTop="5dp"
                    app:srcCompat="@drawable/ic_error_red" />


            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    //0.2

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    //1
    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:orientation="horizontal"

        >

        <ImageButton
            android:id="@+id/sellItemBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sell_btn"
            android:layout_marginLeft="12dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/nexa_bold"
            android:text="@string/sell"
            android:textColor="@android:color/white"
            android:textSize="11sp"
            android:textStyle="bold" />
    </LinearLayout>


    //0.4
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"/>


    //2
    <LinearLayout
        android:id="@+id/constraintLayout5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            >

            <LinearLayout
                android:id="@+id/linearLayout9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"


                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/sell"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"

                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ProgressBar
                        android:id="@+id/sell1_progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/circular_shape"
                        android:indeterminate="false"
                        android:progressDrawable="@drawable/circular_progress_bar"

                        />

                    <TextView
                        android:id="@+id/sellProgressText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="120"
                        android:fontFamily="@font/helve_thin"
                        android:textColor="@color/yellow_light"
                        android:textSize="20sp" />
                </RelativeLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayout7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="0dp"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/items"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"

                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ProgressBar
                        android:id="@+id/item_progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/circular_shape"
                        android:indeterminate="false"
                        android:progressDrawable="@drawable/circular_progress_bar"

                        />

                    <TextView
                        android:id="@+id/itemProgressText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/helve_thin"
                        android:text="120"
                        android:textColor="@color/yellow_light"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"

                >


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="1dp"
                    android:fontFamily="@font/nexa_bold"
                    android:text="@string/profit"
                    android:textColor="@android:color/white"
                    android:textSize="10sp"
                    android:textStyle="bold"

                    />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">


                    <ProgressBar
                        android:id="@+id/profit_progressBar"
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:background="@drawable/circular_shape"
                        android:indeterminate="false"

                        android:progressDrawable="@drawable/circular_progress_bar" />

                    <TextView
                        android:id="@+id/profitprogressText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:fontFamily="@font/helve_thin"
                        android:textColor="@color/yellow_light"
                        android:text="120"
                        android:textSize="20sp"
                        android:textStyle="bold" />


                </RelativeLayout>


            </LinearLayout>


        </LinearLayout>


    </LinearLayout>




    //0.3
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"/>

    //0.8

    <LinearLayout
        android:id="@+id/aaa"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:weightSum="10"

        >

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.2"/>



        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.7"
            >

            <ImageButton
                android:id="@+id/addItemsBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/update_btn" />


            <TextView
                android:id="@+id/addNewItemsBtnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/nexa_bold"
                android:text="@string/update"
                android:textColor="@color/darkblue"
                android:textSize="10sp" />
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_weight="2.9"
            android:layout_height="match_parent"

            >


            <ImageButton
                android:id="@+id/addNewItemsBtn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"

                android:background="@drawable/item_bkgrd" />

            <TextView
                android:id="@+id/addItemsBtnText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:fontFamily="@font/nexa_bold"
                android:text="@string/items"
                android:textColor="@color/darkblue"
                android:textSize="10sp" />

        </LinearLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.2"/>
    </LinearLayout>


    //0.3
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.7">

    </ScrollView>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8"

        >





    </androidx.coordinatorlayout.widget.CoordinatorLayout>









</LinearLayout>